# jobdsigner

./: CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  README.md  cmake_install.cmake  config_manager.h  global.h  http_response.h  http_server.h  http_status.h  index.html  jd_version.h  job_management.h  jobdsigner  main.c  main.c~  memory_management.h  role_management.h
